@@ -800,8 +800,6 @@ Quizá setting para limitar o no
 ->agregar parametro config y grabado config
 
 
--zmenu: en ayuda (--helpzmenu) crear
-
 
 -LEC memory extension https://ia600604.us.archive.org/view_archive.php?archive=/1/items/World_of_Spectrum_June_2017_Mirror/World%20of%20Spectrum%20June%202017%20Mirror.zip&file=World%20of%20Spectrum%20June%202017%20Mirror/sinclair/hardware-info/l/LECMemoryExtension.pdf
 -CPM para LEC: https://spectrumcomputing.co.uk/index.php?cat=96&id=23809
