@@ -188,6 +188,10 @@ z80_bit sync_clock_to_z88={1};
 z80_bit zsf_snap_save_rom={0};
 
 
+//Automontar ruta con el esxdos handler al cargar snapshots de Next .nex y .snx
+z80_bit automount_esxdos_nex={1};
+
+
 //
 // Tape Settings
 //
